# innovhack

./: README-BRIEF.md  pyproject.toml
src/specify_cli/: __init__.py
templates/: CLAUDE.md  brief-rule.md  mcp-config.json
templates/commands/: brief.context.md
